Horde3D/Bindings/C#/Source/Horde3D .NET/Horde3D_Import.cs


        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dCastRay(int node, float ox, float oy, float oz, float dx, float dy, float dz, int numNearest);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        [return: MarshalAs(UnmanagedType.U1)]   // represents C++ bool type 
        internal static extern bool h3dGetCastRayResult(int index, out int node, out float distance, float[] intersection);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dCheckNodeVisibility(int node, int cameraNode, [MarshalAs(UnmanagedType.U1)]bool checkOcclusion, [MarshalAs(UnmanagedType.U1)]bool calcLod);

        // Group specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddGroupNode(int parent, string name);

        // Model specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddModelNode(int parent, string name, int geoRes);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]        
        internal static extern void h3dSetupModelAnimStage(int node, int stage, int animationRes,
                                      int layer, string startNode, [MarshalAs(UnmanagedType.U1)]bool additive);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern void h3dGetModelAnimParams(int node, int stage, out float time, out float weight);
        
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]        
        internal static extern void h3dSetModelAnimParams(int node, int stage, float time, float weight);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        [return: MarshalAs(UnmanagedType.U1)]   // represents C++ bool type 
        internal static extern bool h3dSetModelMorpher(int node, string target, float weight);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern void h3dUpdateModel(int modelNode, int flags);

        // Mesh specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddMeshNode(int parent, string name, int matRes, 
								    int batchStart, int batchCount,
							    int vertRStart, int vertREnd );
      
        // Joint specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddJointNode(int parent, string name, int jointIndex);

        // Light specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddLightNode(int parent, string name, int materialRes,
                                     string lightingContext, string shadowContext);

          // Camera specific
        //horde3d 1.0
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddCameraNode(int parent, string name, int pipelineRes);
        /////

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]        
        internal static extern void h3dSetupCameraView(int node, float fov, float aspect, float nearDist, float farDist);
            
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]        
        internal static extern void h3dGetCameraProjMat(int node, float[] projMat);


	    // Emitter specific
        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern int h3dAddEmitterNode(int parent, string name,
								       int matRes, int effectRes,
								       int maxParticleCount, int respawnCount );

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        internal static extern void h3dUpdateEmitter(int node, float timeDelta);

        [DllImport(ENGINE_DLL), SuppressUnmanagedCodeSecurity]
        [return: MarshalAs(UnmanagedType.U1)]   // represents C++ bool type 
        internal static extern bool h3dHasEmitterFinished(int emitterNode);

    }
}